# pdf-parser

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
pdf_parser/: commands.py  extract.py  page_group.py  types.py
tests/: conftest.py  general_test.py  preview_test.py
