[tool.poetry]
name = "pdf-parser"
version = "0.1.0"
description = ""
authors = ["Ezequiel Barbero <barbero.oe@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.7.6"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
